Added Basic Layout Elements

--- a/index.html
+++ b/index.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Dashboard</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/77a705ab90.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    
+    <div class="sidebar">
+        <div class="logo-and-header">
+            <div class="logo-grid-icon"></div>
+            <span>Dashboard</span>
+        </div>
+        <div class="nav-logos">
+            <div class="home">
+                <i class="fa-solid fa-house-chimney"></i>
+                <a href="">Home</a>
+            </div>
+            <div class="linkedin">
+                <i class="fa-brands fa-linkedin"></i>
+                <a href="https://www.linkedin.com/in/ritin-malhotra/" target="_blank">LinkedIn</a>
+            </div>
+            <div class="github">
+                <i class="fa-brands fa-github"></i>
+                <a href="https://github.com/RitinDev" target="_blank">Github</a>
+            </div>
+            <div class="about-me">
+                <i class="fa-solid fa-user"></i>
+                <a href="About me">About me</a>
+            </div>
+        </div>
+    </div>
+    <div class="top-intro">
+        <h1>Welcome</h1>
+        <h3>I'm a Computer Science Student at New York University currently learning the basics of Web Development</h3>
+        <h5>Feel free to click on any project to open it in your browser</h3>
+    </div>
+    <div class="main-content">
+        <div class="card-one-EaS"></div>
+        <div class="card-two-SignUpForm"></div>
+        <div class="card-three-calculator"></div>
+        <div class="card-four-landing-page"></div>
+    </div>
+    <div class="footer">
+        <span>Ritin Malhotra © 2022</span>
+    </div>
 </body>
+
 </html>
