--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 <body>
     <div class="sidebar">
         <div class="logo-and-header">
-            <div class="logo-grid-icon"></div>
+            <div class="logo-grid-icon">
+                <div class="top-left"></div>
+                <div class="top-right"></div>
+                <div class="bottom-left"></div>
+                <div class="bottom-right"></div>
+            </div>
             <span>Dashboard</span>
         </div>
         <div class="nav-logos">
@@ -31,7 +36,7 @@
             </div>
             <div class="about-me">
                 <i class="fa-solid fa-user"></i>
-                <a href="About me">About me</a>
+                <a href="">About me</a>
             </div>
         </div>
     </div>
