Add Top and Right Side Sections + Styled Them

--- a/index.html
+++ b/index.html
@@ -41,15 +41,16 @@
         </div>
     </div>
     <div class="top-intro">
-        <h1>Welcome</h1>
-        <h3>I'm a Computer Science Student at New York University currently learning the basics of Web Development</h3>
+        <h1>Well, hello there!</h1>
         <h5>Feel free to click on any project to open it in your browser</h3>
     </div>
+    <div class="top-side-content"></div>
+    <div class="bottom-side-content"></div>
     <div class="main-content">
-        <div class="card-one-EaS"></div>
-        <div class="card-two-SignUpForm"></div>
-        <div class="card-three-calculator"></div>
-        <div class="card-four-landing-page"></div>
+        <div class="card one-EaS"></div>
+        <div class="card two-SignUpForm"></div>
+        <div class="card three-calculator"></div>
+        <div class="card four-landing-page"></div>
     </div>
     <div class="footer">
         <span>Ritin Malhotra © 2022</span>
