Add Website Screenshots + Cards (with Basic Styling)

--- a/index.html
+++ b/index.html
@@ -47,10 +47,18 @@
     <div class="top-side-content"></div>
     <div class="bottom-side-content"></div>
     <div class="main-content">
-        <div class="card one-EaS"></div>
-        <div class="card two-SignUpForm"></div>
-        <div class="card three-calculator"></div>
-        <div class="card four-landing-page"></div>
+        <div class="card one-EaS">
+            <div class="info"></div>
+        </div>
+        <div class="card two-SignUpForm">
+            <div class="info"></div>
+        </div>
+        <div class="card three-calculator">
+            <div class="info"></div>
+        </div>
+        <div class="card four-landing-page">
+            <div class="info"></div>
+        </div>
     </div>
     <div class="footer">
         <span>Ritin Malhotra © 2022</span>
