Added Descriptions for Each Card + Share Buttons (Currently not Functional)

--- a/index.html
+++ b/index.html
@@ -48,16 +48,62 @@
     <div class="bottom-side-content"></div>
     <div class="main-content">
         <div class="card one-EaS">
-            <div class="info"></div>
+            <div class="info">
+                <div class="name-and-description">
+                    <span id="name">Etch-a-Sketch</span>
+                    <br>
+                    <span id="description">An interactive drawing tool replete with fun features</span>
+                </div>
+                <div class="buttons">
+                    <i class="fa-solid fa-square-share-nodes"></i>
+                </div>
+                <a href="https://ritindev.github.io/odin-etch-a-sketch/" target="_blank"></a>
+            </div>
+            <a href="https://ritindev.github.io/odin-etch-a-sketch/" target="_blank"></a>
         </div>
         <div class="card two-SignUpForm">
-            <div class="info"></div>
+            <div class="info">
+                <div class="name-and-description">
+                    <span id="name">Sign-up-Form</span>
+                    <br>
+                    <span id="description">A template sign up form with styled form-elements and custom input
+                        validation</span>
+                </div>
+                <div class="buttons">
+                    <i class="fa-solid fa-square-share-nodes"></i>
+                </div>
+                <a href="https://ritindev.github.io/odin-sign-up-form/" target="_blank"></a>
+            </div>
+            <a href="https://ritindev.github.io/odin-sign-up-form/" target="_blank"></a>
         </div>
         <div class="card three-calculator">
-            <div class="info"></div>
+            <div class="info">
+                <div class="name-and-description">
+                    <span id="name">Simple Calculator</span>
+                    <br>
+                    <span id="description">A simple calculator that supports both keyboard and mouse inputs with various
+                        utility functions</span>
+                </div>
+                <div class="buttons">
+                    <i class="fa-solid fa-square-share-nodes"></i>
+                </div>
+                <a href="https://ritindev.github.io/odin-calculator/" target="_blank"></a>
+            </div>
+            <a href="https://ritindev.github.io/odin-calculator/" target="_blank"></a>
         </div>
         <div class="card four-landing-page">
-            <div class="info"></div>
+            <div class="info">
+                <div class="name-and-description">
+                    <span id="name">Landing Page</span>
+                    <br>
+                    <span id="description">A template landing page sporting togglable light and dark themes</span>
+                </div>
+                <div class="buttons">
+                    <i class="fa-solid fa-square-share-nodes"></i>
+                </div>
+                <a href="https://ritindev.github.io/odin-landing-page/" target="_blank"></a>
+            </div>
+            <a href="https://ritindev.github.io/odin-landing-page/" target="_blank"></a>
         </div>
     </div>
     <div class="footer">
