--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Project Dashboard</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/77a705ab90.js" crossorigin="anonymous"></script>
+    <script src="MainScript.js" defer></script>
 </head>
 
 <body>
