Add Text to the Top-Right Unit

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
         <h1>Well, hello there!</h1>
         <h5>Feel free to click on any project to open it in your browser</h3>
     </div>
-    <div class="top-side-content"></div>
+    <div class="top-side-content">
+        <span>Fancy Some Color?</span>
+    </div>
     <div class="bottom-side-content"></div>
     <div class="main-content">
         <div class="card one-EaS">
