Added Bottom-Right Block Content

--- a/index.html
+++ b/index.html
@@ -48,7 +48,14 @@
     <div class="top-side-content">
         <span>Fancy Some Color?</span>
     </div>
-    <div class="bottom-side-content"></div>
+    <div class="bottom-side-content">
+        <h1>Up Next</h1>
+        <span id="react-js">React <i class="fa-brands fa-react"></i></span>
+        <span id="break"></span>
+        <span id="html-css">Advanced HTML & CSS</span>
+        <span id="break"></span>
+        <span id="node-js">NodeJS <i class="fa-brands fa-node-js"></i></span>
+    </div>
     <div class="main-content">
         <div class="card one-EaS">
             <div class="info">
