--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h5>Feel free to click on any project to open it in your browser</h3>
     </div>
     <div class="top-side-content">
-        <span>Fancy Some Color?</span>
+        <span id="color-changer">Fancy Some Color?</span>
     </div>
     <div class="bottom-side-content">
         <h1>Up Next</h1>
