--- a/index.html
+++ b/index.html
@@ -74,17 +74,16 @@
         <div class="card two-SignUpForm">
             <div class="info">
                 <div class="name-and-description">
-                    <span id="name">Sign-up-Form</span>
+                    <span id="name">Tic-Tac-Toe</span>
                     <br>
-                    <span id="description">A template sign up form with styled form-elements and custom input
-                        validation</span>
+                    <span id="description">Play a quick game of tic-tac-toe</span>
                 </div>
                 <div class="buttons">
                     <i class="fa-solid fa-square-share-nodes"></i>
                 </div>
-                <a href="https://ritindev.github.io/odin-sign-up-form/" target="_blank"></a>
+                <a href="https://ritindev.github.io/odin-tic-tac-toe" target="_blank"></a>
             </div>
-            <a href="https://ritindev.github.io/odin-sign-up-form/" target="_blank"></a>
+            <a href="https://ritindev.github.io/odin-tic-taco-toe" target="_blank"></a>
         </div>
         <div class="card three-calculator">
             <div class="info">
