--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
                 <a href="https://ritindev.github.io/odin-tic-tac-toe" target="_blank"></a>
             </div>
-            <a href="https://ritindev.github.io/odin-tic-taco-toe" target="_blank"></a>
+            <a href="https://ritindev.github.io/odin-tic-tac-toe" target="_blank"></a>
         </div>
         <div class="card three-calculator">
             <div class="info">
